##
# https://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files
[metadata]
version = 0.0.0.dev.0
name = kojavro
description = Python 3 Avro Library
long_description = A Python Avro library focused on simplicity, correctness and performance.
author = Kojiro
author_email = kojiromike@gmail.com
url = https://github.com/kojiromike/kojavro
classifiers =
  Programming Language :: Python :: 3.6

[options]
zip_safe = True 
include_package_data = True
packages =
  src
install_requires =

[tool:pytest]
python_files = tests.py test_*.py *_tests.py

[mypy]
ignore_missing_imports = true

[pep8]
# Code Climate respects a pep8 section
max_line_length = 100
